<resources>
    <string name="app_name">BrewBuddyCS380</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_shopping_list">ShoppingList</string>
    <!-- Strings used for fragments for navigation -->

    <string name="appwidget_text">EXAMPLE</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="brew_buddy_logo">Brew Buddy Logo</string>
    <string name="create_new_account">Create New Account</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="we_just_have_a_few_questions_to_curate_your_coffee_recommendation_choose_as_many_or_as_few_answers_as_you_d_like">We just have a few questions to curate your coffee recommendation. Choose as many or as few answers as you\'d like</string>
    <string name="get_started">Get Started</string>
    <string name="recommendation">Recommendation</string>
    <string name="description_of_the_coffee_recommendation">Description of the coffee recommendation</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="order">Order</string>
    <string name="express_order">Express Order</string>
    <string name="image_of_recommended_coffee">Image of recommended coffee</string>
    <string name="surprise_me">Surprise Me</string>
    <string name="iced">Iced</string>
    <string name="hot">Hot</string>
    <string name="do_you_prefer_your_coffee_iced_or_hot">Do you prefer your coffee iced or hot?</string>
    <string name="light_and_flavorful">Light and Flavorful</string>
    <string name="dark_and_bold">Dark and Bold</string>
    <string name="and_what_about_the_roast">And what about the roast?</string>
    <string name="i_like_my_coffee_dark">I like my coffee dark</string>
    <string name="i_have_a_sweet_tooth">I have a sweet tooth</string>
    <string name="mild_sweetness_please">Mild sweetness please</string>
    <string name="what_is_your_sweetness_preference">What is your sweetness preference?</string>
    <string name="a_splash_of_creamer">A splash of creamer</string>
    <string name="i_ll_take_it_black">I\'ll take it black</string>
    <string name="would_you_like_creamer_with_that">Would you like creamer with that?</string>
    <string name="i_ll_take_decaf">I\'ll take decaf</string>
    <string name="i_need_some_energy">I need some energy</string>
    <string name="are_you_sensitive_to_caffeine">Are you sensitive to caffeine?</string>
    <string name="i_want_some_foam">I want some foam</string>
    <string name="no_foam">No foam</string>
    <string name="and_what_about_milk_foam">And what about milk foam?</string>
    <string name="fruity">Fruity</string>
    <string name="caramel">caramel</string>
    <string name="vanilla">vanilla</string>
    <string name="chocolate">Chocolate</string>
    <string name="would_you_like_any_flavored_syrups">Would you like any flavored syrups?</string>
    <string name="made_your_final_choices">Made your final choices?</string>
    <string name="submit">Submit</string>
    <string name="checkout">Checkout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brew_buddy">Brew Buddy</string>
    <string name="search">Search</string>
</resources>