<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginFragment">

    <FrameLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginBottom="356dp"
        android:autofillHints="username"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/password"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:autofillHints="password"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="0.048" />


    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:clickable="true"
        android:text="@string/forgot_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.044" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="296dp"
        android:layout_height="198dp"
        android:layout_marginBottom="17dp"
        android:contentDescription="@string/brew_buddy_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085"
        app:srcCompat="@drawable/dark_logo" />


    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:hint="@string/login"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.083" />

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:clickable="true"
        android:onClick="onClick"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/create_new_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword"
        app:layout_constraintVertical_bias="0.917"

        />

</androidx.constraintlayout.widget.ConstraintLayout>