<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".question1">

    <ToggleButton
        android:id="@+id/darkSweetButton"
        android:layout_width="139dp"
        android:layout_height="64dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/toggle_button_selector"
        android:textOff="@string/i_like_my_coffee_dark"
        android:textOn="@string/i_like_my_coffee_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sweetButton"
        app:layout_constraintVertical_bias="0.005" />

    <ToggleButton
        android:id="@+id/sweetButton"
        android:layout_width="139dp"
        android:layout_height="64dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/toggle_button_selector"
        android:checked="false"
        android:textOff="@string/i_have_a_sweet_tooth"
        android:textOn="@string/i_have_a_sweet_tooth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question3Text" />

    <ToggleButton
        android:id="@+id/mildSweetButton"
        android:layout_width="139dp"
        android:layout_height="64dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/toggle_button_selector"
        android:textOff="@string/mild_sweetness_please"
        android:textOn="@string/mild_sweetness_please"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/darkSweetButton"
        app:layout_constraintVertical_bias="0.017" />

    <TextView
        android:id="@+id/question3Text"
        android:layout_width="359dp"
        android:layout_height="125dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/what_is_your_sweetness_preference"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.374" />


</androidx.constraintlayout.widget.ConstraintLayout>