<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".question1">

    <ToggleButton
        android:id="@+id/lightButton"
        android:layout_width="139dp"
        android:layout_height="64dp"
        android:layout_marginTop="52dp"
        android:checked="false"
        android:textOff="@string/light_and_flavorful"
        android:textOn="@string/light_and_flavorful"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question2Text"
        app:layout_constraintVertical_bias="0.0"
        android:background="@drawable/toggle_button_selector" />

    <ToggleButton
        android:id="@+id/darkButton"
        android:layout_width="139dp"
        android:layout_height="64dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/toggle_button_selector"
        android:textOff="@string/dark_and_bold"
        android:textOn="@string/dark_and_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lightButton"
        app:layout_constraintVertical_bias="0.017" />

    <TextView
        android:id="@+id/question2Text"
        android:layout_width="359dp"
        android:layout_height="125dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/and_what_about_the_roast"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.374" />


</androidx.constraintlayout.widget.ConstraintLayout>